<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">TODO</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
</resources>